# ip

./: .gitignore  CMakeLists.txt  LICENSE  README.md
assets/materials/: README.md
assets/shaders/: frag.glsl  vert.glsl
books/: README.md
doc/: sources.txt
doc/pics/ilustrations/: ambOcc.kra  ray.kra  sphereD.kra
include/: Audio.h  Camera.h  Clause.h  Display.h  Parser.hpp  Quad.h  Scanner.h  Scene.h  ShaderProgram.h  Texture.h  Timer.h  Window.h  glad.h  log.h  test.h
include/glad/: glad.h
include/ip/: Audio.h  Clause.h  Display.h  GeometricalObject.hpp  Instruction.h  Instruction.hpp  Parser.hpp  Scene.h  ShaderProgram.h  Syntax.h  Syntax.hpp  Tape.h  TapeGenerator.h  Window.h  Window.hpp  test.h
literature/: README.md
src/: Audio.cpp  Camera.cpp  Camera.h  Clause.cpp  Display.cpp  Display.hpp  GeometricalObject.cpp  Instruction.cpp  OBJLoader.cpp  Parser.cpp  Parser.hpp  Quad.cpp  Scanner.cpp  Scene.cpp  ShaderProgram.cpp  Syntax.cpp  Syntax.h  Syntax.hpp  Tape.cpp  TapeGenerator.cpp  Texture.cpp  Timer.cpp  Window.cpp  glad.c  log.cpp  main.cpp  test.cpp
